[package]
name = "slackfs"
version = "0.1.0"
edition = "2024"
description = "Slack file upload utility."

[dependencies]
slack-morphism = { path = "deps/slack-morphism-rust", features = [
    "hyper",
    "signature-verifier",
] }
#version = "2.14.0"
hyper = { version = "1.3", features = ["http2", "server", "client"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "server",
] }
chrono = "0.4.41"
url = "2.5.4"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.40", features = ["derive", "env", "string", "unicode"] }
tokio-tungstenite = "0.27.0"
tokio-stream = "0.1.17"
colored = "3.0.0"
datetime = "0.5.2"
hyper-rustls = "0.27.7"
reqwest = "0.12.22"
mime_guess = "2.0.5"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "run-for-all",
    "prepush-hook",
    "run-cargo-fmt",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-proxy2 = "0.1"
hyper = { version = "1.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[features]
# hyper = ["dep:hyper"]
